ec-pascal/Examples/bad/Example3.pas
Program Example3;
     
Begin
	writeln('Enter your name:');
	readln(name);
	writeln('Enter your surname:');
	readln(surname);
	writeln;
	writeln;
	writeln('Your full name is: ',name,' ',surname);
	readln;
End.
